--- a/mysite/restaurants/templates/comments.html
+++ b/mysite/restaurants/templates/comments.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title> Restaurants </title>
+        <title> Comment </title>
         <meta charset='utf-8'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
@@ -39,27 +39,43 @@
 
         <div class="container">
             <div class="center_padding">
-                <h2>餐廳列表</h2>
-                <form action="/menu/" method="get">
+                <h2>{{ r.name }}的評價</h2>
+                {% if r.comment_set.all %}
+                <p>目前共有{{ r.comment_set.all|length }}條評價</p>
                 <table class="table table-hover">
                     <tr>
-                        <th>選取</th>
-                        <th>店名</th>
-                        <th>電話</th>
-                        <th>地址</th>
+                        <th>留言者</th>
+                        <th>時間</th>
                         <th>評價</th>
                     </tr>
-                    {% for r in restaurants %}
+                    {% for c in r.comment_set.all %}
                     <tr>
-                         <td> <input type="radio" name="id" value="{{r.id}}"> </td>
-                        <td> {{ r.name }} </td>
-                        <td> {{ r.phone_number }} </td>
-                        <td> {{ r.address }} </td>
-                        <td> <a href="/comment/{{r.id}}/"> 評價 </a> </td> 
+                        <td> {{ c.visitor }} </td>
+                        <td> {{ c.date_time | date:"F j, Y" }} </td>
+                        <td> {{ c.content }} </td>
                     </tr>
                     {% endfor %}
                 </table>
-                <input type="submit" value="觀看menu" class="btn btn-default">
+                {% else %}
+                <p>無評價</p>
+                {% endif %}
+
+                <br /><br />
+
+                <form action="" method="post" class="form-horizontal" role="form" style="width:33%; margin:auto; text-align:left">{% csrf_token %}
+                    <div class="form-group">
+                    <label for="visitor">留言者:</label>
+                    <input id="visitor" type="text" name="visitor" class="form-control">
+                    </div>
+                    <div class="form-group">
+                    <label for="email">電子信箱:</label>
+                    <input id="email" type="text" name="email" class="form-control">
+                    </div>
+                    <div class="form-group">
+                    <label for="content">評價:</label>
+                    <textarea id="content" rows="10" cols="48" name="content" class="form-control"></textarea>
+                    </div>
+                    <input type="submit" value="給予評價" class="btn btn-default">
                 </form>
             </div>
         </div>
